[package]
name = "hybrid-lock"
version = "0.1.0"
edition = "2021"
authors = ["Seiichi Uchida <topecongiro@fastmail.com>"]
repository = "https://github.com/topecongiro/hybrid-lock"
description = "A hybrid lock with optimistic locking"
license = "MIT OR Apache-2.0"
keywords = ["mutex", "rwlock", "thread"]
categories = ["concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"